--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-hook-form": "^7.49.3",
     "react-markdown": "^9.0.1",
     "react-syntax-highlighter": "^15.5.0",
+    "replicate": "^0.25.2",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
